Update CTA button to 'Contact Us' with affiliate link

--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
                     <a href="tel:7287770057" class="inline-block bg-white text-blue-600 px-8 py-4 rounded-lg text-lg font-semibold transform hover:scale-105 transition duration-300 hover:bg-gray-100 hover:shadow-xl">
                         Call (728) 777-0057
                     </a>
-                    <a href="mailto:info@waterheaterpalmcity.info" class="inline-block bg-gray-800 text-white px-8 py-4 rounded-lg text-lg font-semibold transform hover:scale-105 transition duration-300 hover:bg-gray-700 hover:shadow-xl">
-                        Email Us
+                    <a href="https://leads.leadsmartinc.com/?api_key=eccf565586cda416df8b89f66df641fee9a1bcb8&affiliate_source=albertowaizel1&category=&funnel=3&buttons=btn-success&step=1" class="inline-block bg-gray-800 text-white px-8 py-4 rounded-lg text-lg font-semibold transform hover:scale-105 transition duration-300 hover:bg-gray-700 hover:shadow-xl">
+                        Contact Us
                     </a>
                 </div>
             </div>
